--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -7,16 +7,7 @@
     android:layout_height="match_parent"
     tools:context="cs175.babysactivities.BabyActivities">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -29,5 +20,90 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+            android:layout_marginVertical="@dimen/activity_vertical_margin"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/feed_button"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:layout_marginLeft="15dp"
+                android:background="@android:color/holo_purple"
+                android:drawableTop="@drawable/drinking"
+                android:text="Feed"
+               />
+
+            <Button
+                android:id="@+id/diaper_button"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:background="@android:color/holo_green_light"
+                android:drawableTop="@drawable/diaper"
+                android:text="Diaper"
+                 />
+
+            <Button
+                android:id="@+id/supply_button"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:background="@android:color/holo_blue_light"
+                android:drawableTop="@drawable/sleep"
+                android:text="Sleep"
+                />
+
+            <Button
+                android:id="@+id/calender_button"
+                android:layout_width="wrap_content"
+                android:layout_height="80dp"
+                android:background="@color/colorAccent"
+                android:drawableTop="@drawable/bath"
+                android:text="Bath"
+                 />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/temp_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="70"
+                    android:drawableRight="@drawable/degrees"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/thermo"
+                    />
+ <!--           <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                /> -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="C"
+                android:textSize="40dp"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
