--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cs175.babysactivities.BabyActivities">
+    tools:context="cs175.babysactivities.BabyActivities"
+  >
 
 
 
@@ -15,11 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
+        android:background="#98b7f8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        app:menu="@menu/navigation"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,45 +33,47 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="@dimen/activity_vertical_margin"
             app:layout_constraintTop_toTopOf="parent">
 
             <Button
                 android:id="@+id/feed_button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:layout_marginLeft="15dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="7dp"
                 android:background="@android:color/holo_purple"
                 android:drawableTop="@drawable/drinking"
                 android:text="Feed"
+                android:onClick="startFeed"
                />
 
             <Button
                 android:id="@+id/diaper_button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:background="@android:color/holo_green_light"
                 android:drawableTop="@drawable/diaper"
                 android:text="Diaper"
+                android:onClick="getDiaper"
                  />
 
             <Button
-                android:id="@+id/supply_button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:background="@android:color/holo_blue_light"
+                android:id="@+id/sleep_button"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@color/colorAccent"
                 android:drawableTop="@drawable/sleep"
                 android:text="Sleep"
+                android:onClick="startSleep"
                 />
 
             <Button
-                android:id="@+id/calender_button"
-                android:layout_width="wrap_content"
-                android:layout_height="80dp"
-                android:background="@color/colorAccent"
-                android:drawableTop="@drawable/bath"
-                android:text="Bath"
+                android:id="@+id/walk_button"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@android:color/holo_blue_light"
+                android:drawableTop="@drawable/walk"
+                android:text="Walk"
+                android:onClick="startWalk"
                  />
         </LinearLayout>
         <LinearLayout
@@ -101,6 +105,32 @@
                 android:layout_gravity="center"
                 />
         </LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="Today Activities:"
+                android:textSize="20dp"
+                android:textColor="@color/colorAccent"
+                android:background="#99ccff"
+                android:textAlignment="center"
+                android:gravity="center"/>
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/today_list"
+                ></ListView>
+
+            </LinearLayout>
+
+
+        </ScrollView>
 
 
 
