--- a/app/src/main/res/layout/activity_diaper.xml
+++ b/app/src/main/res/layout/activity_diaper.xml
@@ -6,28 +6,98 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cs175.babysactivities.DiaperActivity">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
     <TextView
-        android:id="@+id/message"
+        android:id="@+id/name_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
+        android:layout_gravity="center"
+        android:layout_marginVertical="@dimen/fab_margin"
+        android:drawableLeft="@drawable/babyface"
+        android:gravity="center"
+        android:text="Name"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        android:textSize="30dp" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:srcCompat="@drawable/diaper"
+        android:layout_gravity="center"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
+        android:layout_gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="Diapers have :"
+            android:textSize="30sp"
+            android:textColor="@android:color/black"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="100"
+            android:textSize="30sp"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="pcs left"
+            android:textSize="30sp"
+            android:textColor="@android:color/black"
+            android:layout_marginLeft="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="40dp">
+    <CheckBox
+        android:id="@+id/pee"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="Pee-pee"
+        android:textSize="25sp"
+        />
+
+    <CheckBox
+        android:id="@+id/poo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Poo-poo"
+        android:textSize="25sp"
+        android:layout_marginTop="20dp"/>
+
+    <CheckBox
+        android:id="@+id/both"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Both"
+        android:textSize="25sp"
+        android:layout_marginTop="20dp"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Supplies"
+        android:layout_gravity="center"
+        android:background="@android:color/holo_green_light"
+        android:layout_marginTop="30dp"
+        android:padding="20dp"/>
+
+
+</LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
