--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="60dp"
-        android:text="Register For Your Baby"
+        android:text="Baby's Information"
         android:textSize="25dp"
         android:textColor="@color/colorPrimary"
         android:gravity="center"
@@ -27,12 +27,13 @@
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="120dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
-            android:text="Name:"
+            android:text="Name *:"
             android:textSize="20dp"
             android:gravity="center"
             android:textColor="@color/colorPrimaryDark" />
@@ -41,9 +42,11 @@
             android:layout_height="50dp"
             android:layout_marginRight="20dp"
             android:gravity="center"
-            android:hint="Enter Your Child Name"
+            android:hint="Baby's Name"
             android:inputType="textCapWords"
-            android:id="@+id/edit_name"/>
+            android:id="@+id/edit_name"
+            />
+        <requestFocus/>
     </LinearLayout>
     <LinearLayout
         android:layout_height="wrap_content"
@@ -67,9 +70,52 @@
             android:id="@+id/edit_birthday"/>
     </LinearLayout>
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:layout_marginTop="20dp">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:text="Weight:"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryDark" />
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:textSize="20dp"
+            android:inputType="date"
+            android:hint="Baby's weight"
+            android:gravity="center"
+            android:id="@+id/edit_weight"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp">
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:text="Height:"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryDark" />
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:textSize="20dp"
+            android:inputType="date"
+            android:hint="Baby's height"
+            android:gravity="center"
+            android:id="@+id/edit_height"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center">
         <Button
             android:id="@+id/register_button"
             android:layout_width="100dp"
@@ -78,16 +124,7 @@
             android:textSize="16dp"
             android:layout_marginTop="20dp"
             android:background="@android:color/holo_green_light"
-            android:layout_marginLeft="95dp"/>
-        <Button
-            android:id="@+id/skip_button"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:text="SKIP"
-            android:textSize="16dp"
-            android:layout_marginTop="20dp"
-            android:background="@android:color/holo_red_light"
-            android:layout_marginLeft="20dp"/>
+            />
 
     </LinearLayout>
 
@@ -96,7 +133,7 @@
             android:layout_height="wrap_content"
             android:text="Powered By Loan Vo @ USA 2017"
             android:layout_marginLeft="112dp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="50dp"
             />
 
 
