--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -151,8 +151,9 @@
                 android:gravity="center"/>
             <ListView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="250dp"
                 android:id="@+id/today_list"
+
                 ></ListView>
 
             </LinearLayout>
