--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -143,7 +143,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:text="Today Activities:"
+                android:text="All Activities:"
                 android:textSize="20dp"
                 android:textColor="@color/colorAccent"
                 android:background="#99ccff"
@@ -159,8 +159,13 @@
             </LinearLayout>
 
 
-        </ScrollView>
 
+        </ScrollView>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="add suppies"
+            android:onClick="addSupply"/>
 
 
     </LinearLayout>
