--- a/app/src/main/res/layout/activity_diaper.xml
+++ b/app/src/main/res/layout/activity_diaper.xml
@@ -16,7 +16,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginVertical="@dimen/fab_margin"
         android:drawableLeft="@drawable/babyface"
         android:gravity="center"
         android:text="Name"
@@ -60,7 +59,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+
         android:layout_marginLeft="40dp">
     <CheckBox
         android:id="@+id/pee"
@@ -69,7 +68,10 @@
         android:text="Pee-pee"
         android:textSize="25sp"
         />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <CheckBox
         android:id="@+id/poo"
         android:layout_width="wrap_content"
@@ -77,6 +79,17 @@
         android:text="Poo-poo"
         android:textSize="25sp"
         android:layout_marginTop="20dp"/>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Supplies"
+        android:layout_gravity="center"
+        android:background="@android:color/holo_green_light"
+       android:layout_marginLeft="70dp"/>
+
+
+</LinearLayout>
 
     <CheckBox
         android:id="@+id/both"
@@ -86,16 +99,11 @@
         android:textSize="25sp"
         android:layout_marginTop="20dp"/>
     </LinearLayout>
-
-    <Button
-        android:id="@+id/button"
+    <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Supplies"
-        android:layout_gravity="center"
-        android:background="@android:color/holo_green_light"
-        android:layout_marginTop="30dp"
-        android:padding="20dp"/>
+        android:layout_height="220dp"
+        android:id="@+id/diaper_list"></ListView>
+
 
 
 </LinearLayout>
