--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -11,13 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginTop="40dp">
+       >
         <TextView
             android:id="@+id/name_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="@dimen/fab_margin"
             android:drawableLeft="@drawable/babyface"
             android:gravity="center"
             android:text="Name"
@@ -30,10 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginVertical="@dimen/fab_margin"
-            android:drawableLeft="@drawable/timer"
             android:gravity="center"
-            android:text="60:20"
+            android:text="00:00:00"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="30dp"
@@ -42,7 +39,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:paddingRight="10dp"
             android:background="@drawable/box"
@@ -55,14 +52,16 @@
                 android:background="@android:color/holo_blue_light"
                 app:srcCompat="@drawable/sleep" />
 
-            <Switch
+            <Button
                 android:id="@+id/start_sleep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100dp"
-                android:background="@android:color/holo_green_light"
                 android:gravity="center"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="25dp"
+                android:text="start"
+                android:background="@android:color/holo_green_light"
+                android:clickable="true"/>
 
 
         </LinearLayout>
@@ -70,12 +69,16 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Set Alarm"
+            android:text="play music"
             android:layout_gravity="center"
             android:background="@android:color/holo_green_light"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
             android:padding="20dp"/>
 
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:id="@+id/sleepLogs"></ListView>
 
     </LinearLayout>
 
