--- a/app/src/main/res/layout/activity_diaper.xml
+++ b/app/src/main/res/layout/activity_diaper.xml
@@ -99,12 +99,13 @@
         android:textSize="25sp"
         android:layout_marginTop="20dp"/>
     </LinearLayout>
-    <ListView
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="220dp"
-        android:id="@+id/diaper_list"></ListView>
-
-
+        android:layout_height="wrap_content"
+        >
+        <include android:id="@+id/today_logs" layout="@layout/log_view"/>
+        <include android:id="@+id/previous_logs" layout="@layout/log_view"/>
+    </LinearLayout>
 
 </LinearLayout>
 
