--- a/app/src/main/res/layout/activity_feeding.xml
+++ b/app/src/main/res/layout/activity_feeding.xml
@@ -59,9 +59,7 @@
             <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
                 <TableRow>
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -79,7 +77,6 @@
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="25dp" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -88,9 +85,7 @@
                         android:textColor="@android:color/black"
                         android:textSize="25dp" />
                 </TableRow>
-
                 <TableRow>
-
                     <Button
                         android:id="@+id/switch_bottle"
                         android:layout_width="wrap_content"
@@ -152,24 +147,19 @@
             android:orientation="horizontal"
             android:background="@drawable/box"
             android:layout_marginLeft="5dp">
-
-
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@android:color/holo_blue_light"
                 app:srcCompat="@drawable/breast"
                 android:layout_gravity="center"/>
-
             <TableLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                android:paddingRight="100dp"
                 android:paddingBottom="10dp"
                 >
-
                 <TableRow>
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -187,7 +177,6 @@
                         android:text="start"
                         android:layout_marginLeft="50dp"
                         android:background="@android:color/holo_green_light"/>
-
                 </TableRow>
 
                 <TableRow>
@@ -207,33 +196,17 @@
                         android:layout_marginLeft="50dp"
                         android:layout_marginTop="5dp"
                         android:text="start"
-
                         android:background="@android:color/holo_green_light"></Button>
-
                 </TableRow>
             </TableLayout>
-
-
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Feeding Log:"
-                android:textColor="@color/colorAccent"
-                android:layout_margin="10dp"/>
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:id="@+id/feeding_logs"
             >
-
-        </ListView>
+            <include android:id="@+id/today_logs" layout="@layout/log_view"/>
+            <include android:id="@+id/previous_logs" layout="@layout/log_view"/>
         </LinearLayout>
-
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
@@ -243,8 +216,6 @@
             android:background="@android:color/holo_green_light"
             android:layout_marginTop="10dp"
             android:padding="20dp"/>
-
-
     </LinearLayout>
 
 
