complete log view for every activity - baby activities - sleeping activity --> need to change order of display - diaper activity - feed activity

--- a/app/src/main/res/layout/activity_feeding.xml
+++ b/app/src/main/res/layout/activity_feeding.xml
@@ -200,6 +200,9 @@
                 </TableRow>
             </TableLayout>
         </LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -207,6 +210,7 @@
             <include android:id="@+id/today_logs" layout="@layout/log_view"/>
             <include android:id="@+id/previous_logs" layout="@layout/log_view"/>
         </LinearLayout>
+        </ScrollView>
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
