--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -86,7 +86,6 @@
                     android:id="@+id/temp_view"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="70"
                     android:drawableRight="@drawable/degrees"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:gravity="center"
@@ -109,7 +108,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            >
         <TextView
             android:id="@+id/name_view"
             android:layout_width="wrap_content"
@@ -132,7 +132,18 @@
                 android:textColor="@android:color/black"
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"/>
+
         </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="All Activities:"
+            android:textSize="20dp"
+            android:textColor="@color/colorAccent"
+            android:background="#99ccff"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:id="@+id/title"/>
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -140,16 +151,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:text="All Activities:"
-                android:textSize="20dp"
-                android:textColor="@color/colorAccent"
-                android:background="#99ccff"
-                android:textAlignment="center"
-                android:gravity="center"
-                android:id="@+id/title"/>
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -167,7 +169,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="add suppies"
-            android:onClick="addSupply"/>
+            android:onClick="addSupply"
+            android:gravity="center"
+            android:layout_gravity="center"/>
 
 
     </LinearLayout>
