--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -105,7 +105,7 @@
                 android:layout_marginLeft="10dp"/>
 
         </LinearLayout>
-        <TextView
+ <!--       <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="All Activities:"
@@ -114,7 +114,7 @@
             android:background="#99ccff"
             android:textAlignment="center"
             android:gravity="center"
-            android:id="@+id/title"/>
+            android:id="@+id/title"/>-->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="400dp">
