--- a/app/src/main/res/layout/activity_diaper.xml
+++ b/app/src/main/res/layout/activity_diaper.xml
@@ -49,10 +49,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:text="100"
+            android:id="@+id/diaper_view"
+            android:text="N/A"
             android:textSize="30sp"
-            android:textColor="@android:color/black"
-            android:layout_marginLeft="10dp"/>
+            android:textColor="@android:color/holo_blue_light"
+            android:layout_marginLeft="10dp"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
@@ -86,14 +88,14 @@
         android:text="Poo-poo"
         android:textSize="25sp"
         android:layout_marginTop="20dp"/>
-    <Button
+ <!--   <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Supplies"
         android:layout_gravity="center"
         android:background="@android:color/holo_green_light"
-       android:layout_marginLeft="70dp"/>
+       android:layout_marginLeft="70dp"/> -->
 
 
 </LinearLayout>
