--- a/app/src/main/res/layout/activity_feeding.xml
+++ b/app/src/main/res/layout/activity_feeding.xml
@@ -123,7 +123,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="@dimen/fab_margin"
                 android:gravity="center"
-                android:text="0"
+                android:text="n/a"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="30dp"
@@ -134,7 +134,7 @@
                 android:layout_gravity="center"
                 android:layout_marginVertical="5dp"
                 android:gravity="center"
-                android:text="oz left"
+                android:text="gr left"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="30dp"
