--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -9,20 +9,6 @@
   >
 
 
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:background="#98b7f8"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation"
-        />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -105,7 +91,15 @@
                 android:layout_marginLeft="10dp"/>
 
         </LinearLayout>
- <!--       <TextView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            >
+            <include android:id="@+id/notification" layout="@layout/weather_view"/>
+
+        </LinearLayout>
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="All Activities:"
@@ -114,21 +108,31 @@
             android:background="#99ccff"
             android:textAlignment="center"
             android:gravity="center"
-            android:id="@+id/title"/>-->
+            android:id="@+id/title"/>
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="400dp">
+            android:layout_height="500dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     >
-                    <include android:id="@+id/today_logs" layout="@layout/log_view"/>
-                    <include android:id="@+id/previous_logs" layout="@layout/log_view"/>
+                    <include android:id="@+id/today_logs" layout="@layout/log_view"
+                        android:layout_height="250dp"
+                        android:layout_width="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    >
+                    <include android:id="@+id/previous_logs" layout="@layout/log_view"
+                        android:layout_height="250dp"
+                        android:layout_width="wrap_content"/>
+
                 </LinearLayout>
 
             </LinearLayout>
