--- a/app/src/main/res/layout/log_view.xml
+++ b/app/src/main/res/layout/log_view.xml
@@ -14,10 +14,11 @@
             android:textSize="18dp"
             android:textAlignment="center"
             android:gravity="center"
+            android:visibility="invisible"
             />
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
             android:id="@+id/log_view"></ListView>
 
 
